Added more messages.

--- a/src/main/resources/ro/satrapu/churchmanagement/ui/messages.properties
+++ b/src/main/resources/ro/satrapu/churchmanagement/ui/messages.properties
@@ -25,6 +25,10 @@ global.fields.requiredInfo = * required fields
 global.noRecords = There are no records
 global.recordDoesNotExist = Record was not found - either the provided ID is invalid or it was removed by another user
 
+### Converters ###
+converters.conversionFailed = Conversion failed
+converters.entityIdConverter.conversionFailed = Could not convert value {0} to type {1}
+
 ### Admin.Menu ###
 admin.menu.title = Administration
 admin.menu.persons.title = Persons
@@ -47,6 +51,15 @@ entities.person.fields.id = Person ID
 entities.person.fields.firstname = First Name
 entities.person.fields.middlename = Middle Name
 entities.person.fields.lastname = Last Name
+
+entities.person.actions.save.success = Person has been successfully added
+entities.person.actions.save.failure = Could not add person
+
+entities.person.actions.update.success = Person has been successfully updated
+entities.person.actions.update.failure = Could not update person
+
+entities.person.actions.remove.success = Person has been successfully removed
+entities.person.actions.remove.failure = Could not remove person
 
 # Override the default messages for all JSF converters and validators
 # ==============================================================================
