Added support for rendering controls in readonly mode. Replaced rendering labels for required controls with PrimeFaces outputLabel control which already implements this behavior. Added support for editing a person optional middle name.

--- a/src/main/resources/ro/satrapu/churchmanagement/ui/messages.properties
+++ b/src/main/resources/ro/satrapu/churchmanagement/ui/messages.properties
@@ -19,8 +19,8 @@ global.actions.update = Update
 global.actions.crudCancelled = Changes were not saved
 
 global.fields.selectOneValue = Select a value
-global.fields.required = Value is required
-global.fields.requiredInfo = * required fields
+global.fields.required = value is required
+global.fields.invalid = There are some invalid fields
 
 global.noRecords = There are no records
 global.recordDoesNotExist = Record was not found - either the provided ID is invalid or it was removed by another user
@@ -48,9 +48,10 @@ pages.admin.persons.remove.title = Remove Person
 
 ### Entities.Person ###
 entities.person.fields.id = Person ID
-entities.person.fields.firstname = First Name
-entities.person.fields.middlename = Middle Name
-entities.person.fields.lastname = Last Name
+entities.person.fields.version = Version
+entities.person.fields.firstName = First Name
+entities.person.fields.middleName = Middle Name
+entities.person.fields.lastName = Last Name
 
 entities.person.actions.save.success = Person has been successfully added
 entities.person.actions.save.failure = Could not add person
