Added initial support for user login/logout.

--- a/src/main/resources/ro/satrapu/churchmanagement/ui/messages.properties
+++ b/src/main/resources/ro/satrapu/churchmanagement/ui/messages.properties
@@ -7,6 +7,8 @@ application.error.detail.title = Unfortunately, an error has occurred. Please us
 application.error.detail.panel.title = Details
 
 global.actions = Actions
+global.actions.login = Login
+global.actions.logout = Logout
 global.actions.yes = Yes
 global.actions.no = No
 global.actions.ok = OK
@@ -17,6 +19,7 @@ global.actions.remove = Remove
 global.actions.edit = Edit
 global.actions.update = Update
 global.actions.crudCancelled = Changes were not saved
+global.actions.reset = Reset
 
 global.fields.selectOneValue = Select a value
 global.fields.required = value is required
@@ -29,9 +32,24 @@ global.recordDoesNotExist = Record was not found - either the provided ID is inv
 converters.conversionFailed = Conversion failed
 converters.entityIdConverter.conversionFailed = Could not convert value {0} to type {1}
 
-### Admin.Menu ###
-admin.menu.title = Administration
-admin.menu.persons.title = Persons
+### Menu.Login ###
+menu.login.title = Login
+
+### Menu.Account ###
+menu.account.title = My Account
+menu.account.settings.title = Settings
+menu.account.password.title = Password
+menu.account.logout.title = Logout
+
+### Menu.Admin ###
+menu.admin.title = Administration
+menu.admin.persons.title = Persons
+
+### Login ###
+pages.login.actions.login.success = User has been successfully logged in
+pages.login.actions.login.failure = User name and password do not match
+pages.login.actions.logout.success = User has been successfully logged out
+pages.login.actions.reset = Login form has been reset
 
 ### Admin.Persons.List ###
 pages.admin.persons.list.title = Persons
@@ -45,6 +63,9 @@ pages.admin.persons.add.title = Add Person
 
 ### Admin.Persons.Remove ###
 pages.admin.persons.remove.title = Remove Person
+
+### Login ###
+pages.login.title = Login
 
 ### Entities.Person ###
 entities.person.fields.id = Person ID
@@ -61,6 +82,20 @@ entities.person.actions.update.failure = Could not update person
 
 entities.person.actions.remove.success = Person has been successfully removed
 entities.person.actions.remove.failure = Could not remove person
+
+### Entities.User ###
+entities.user.fields.id = User ID
+entities.user.fields.userName = User Name
+entities.user.fields.password = Password
+
+entities.user.actions.save.success = User has been successfully added
+entities.user.actions.save.failure = Could not add user
+
+entities.user.actions.update.success = User has been successfully updated
+entities.user.actions.update.failure = Could not update user
+
+entities.user.actions.remove.success = User has been successfully removed
+entities.user.actions.remove.failure = Could not remove user
 
 # Override the default messages for all JSF converters and validators
 # ==============================================================================
