Added more translations.

--- a/src/main/resources/ro/satrapu/churchmanagement/ui/messages.properties
+++ b/src/main/resources/ro/satrapu/churchmanagement/ui/messages.properties
@@ -76,9 +76,14 @@ pages.admin.persons.add.title = Add Person
 
 ### Admin.Persons.Remove ###
 pages.admin.persons.remove.title = Remove Person
+pages.admin.persons.remove.confirmation = Are you sure you want to remove this person?
 
 ### Login ###
 pages.login.title = Login
+pages.login.userName.label = User Name
+pages.login.userName.placeholder = Enter a user name
+pages.login.password.label = Password
+pages.login.password.placeholder = Enter a password
 
 ### Entities.Person ###
 entities.person.fields.id = Person ID
