Replaced hard-coded English message with translated one.

--- a/src/main/resources/ro/satrapu/churchmanagement/ui/messages.properties
+++ b/src/main/resources/ro/satrapu/churchmanagement/ui/messages.properties
@@ -64,6 +64,9 @@ pages.login.actions.login.failure = User name and password do not match
 pages.login.actions.logout.success = User has been successfully logged out
 pages.login.actions.reset = Login form has been reset
 
+### Home ###
+pages.home.welcome = Welcome
+
 ### Admin.Persons.List ###
 pages.admin.persons.list.title = Persons
 pages.admin.persons.list.actions.add = Add Person
