Added more content to the user home page.

--- a/src/main/resources/ro/satrapu/churchmanagement/ui/messages.properties
+++ b/src/main/resources/ro/satrapu/churchmanagement/ui/messages.properties
@@ -65,7 +65,9 @@ pages.login.actions.logout.success = User has been successfully logged out
 pages.login.actions.reset = Login form has been reset
 
 ### Home ###
+pages.home.title = Home
 pages.home.welcome = Welcome
+pages.home.description = "Church Management" is an application meant for managing the assets of a church, like: its members, its pastors, the persons involved in discipleship, etc.
 
 ### Admin.Persons.List ###
 pages.admin.persons.list.title = Persons
