Added a new property to Person entity: email address.

--- a/src/main/resources/ro/satrapu/churchmanagement/ui/messages.properties
+++ b/src/main/resources/ro/satrapu/churchmanagement/ui/messages.properties
@@ -96,6 +96,7 @@ entities.person.fields.version = Version
 entities.person.fields.firstName = First Name
 entities.person.fields.middleName = Middle Name
 entities.person.fields.lastName = Last Name
+entities.person.fields.emailAddress = E-mail Address
 
 entities.person.actions.save.success = Person has been successfully added
 entities.person.actions.save.failure = Could not add person
