Added translation for the global PrimeFaces confirmDialog control.

--- a/src/main/resources/ro/satrapu/churchmanagement/ui/messages.properties
+++ b/src/main/resources/ro/satrapu/churchmanagement/ui/messages.properties
@@ -81,7 +81,8 @@ pages.admin.persons.add.title = Add Person
 
 ### Admin.Persons.Remove ###
 pages.admin.persons.remove.title = Remove Person
-pages.admin.persons.remove.confirmation = Are you sure you want to remove this person?
+pages.admin.persons.remove.confirmationDialog.title = Confirm person removal
+pages.admin.persons.remove.confirmationDialog.text = Are you sure you want to remove this person?
 
 ### Login ###
 pages.login.title = Login
