Added "Discipleship" & "Persons" menu items on the application menu.

--- a/src/main/resources/ro/satrapu/churchmanagement/ui/messages.properties
+++ b/src/main/resources/ro/satrapu/churchmanagement/ui/messages.properties
@@ -54,9 +54,22 @@ menu.account.settings.title = Settings
 menu.account.password.title = Password
 menu.account.logout.title = Logout
 
-### Menu.Admin ###
-menu.admin.title = Administration
-menu.admin.persons.title = Persons
+### Menu.Persons ###
+menu.persons.title = Persons
+menu.persons.list.title = List Persons
+menu.persons.add.title = Add Person
+
+### Menu.Discipleship ###
+menu.discipleship.title = Discipleship
+menu.discipleship.teachers.title = Teachers
+menu.discipleship.teachers.list.title = List Teachers
+menu.discipleship.teachers.add.title = Add Teacher
+menu.discipleship.disciples.title = Disciples
+menu.discipleship.disciples.list.title = List Disciples
+menu.discipleship.disciples.add.title = Add Disciple
+menu.discipleship.pairs.title = Teacher/Disciple Pairs
+menu.discipleship.pairs.list.title = List Teacher/Disciple Pairs
+menu.discipleship.pairs.add.title = Add Teacher/Disciple Pair
 
 ### Login ###
 pages.login.actions.login.success = User has been successfully logged in
