Removed "admin" part from person page related message keys.

--- a/src/main/resources/ro/satrapu/churchmanagement/ui/messages.properties
+++ b/src/main/resources/ro/satrapu/churchmanagement/ui/messages.properties
@@ -83,19 +83,19 @@ pages.home.welcome = Welcome
 pages.home.description = "Church Management" is an application meant for managing the assets of a church, like: its members, its pastors, the persons involved in discipleship, etc.
 
 ### Admin.Persons.List ###
-pages.admin.persons.list.title = Persons
-pages.admin.persons.list.actions.add = Add Person
+pages.persons.list.title = Persons
+pages.persons.list.actions.add = Add Person
 
 ### Admin.Persons.Edit ###
-pages.admin.persons.edit.title = Edit Person
+pages.persons.edit.title = Edit Person
 
 ### Admin.Persons.Add ###
-pages.admin.persons.add.title = Add Person
+pages.persons.add.title = Add Person
 
 ### Admin.Persons.Remove ###
-pages.admin.persons.remove.title = Remove Person
-pages.admin.persons.remove.confirmationDialog.title = Confirm person removal
-pages.admin.persons.remove.confirmationDialog.text = Are you sure you want to remove this person?
+pages.persons.remove.title = Remove Person
+pages.persons.remove.confirmationDialog.title = Confirm person removal
+pages.persons.remove.confirmationDialog.text = Are you sure you want to remove this person?
 
 ### Login ###
 pages.login.title = Login
