Changed conversion failed messages. Added login page messages.

--- a/src/main/resources/ro/satrapu/churchmanagement/ui/messages.properties
+++ b/src/main/resources/ro/satrapu/churchmanagement/ui/messages.properties
@@ -42,8 +42,9 @@ global.noRecords = There are no records
 global.recordDoesNotExist = Record was not found - either the provided ID is invalid or it was removed by another user
 
 ### Converters ###
-converters.conversionFailed = Conversion failed
-converters.entityIdConverter.conversionFailed = Could not convert value {0} to type {1}
+converters.conversionFailed.title = Conversion failed
+converters.conversionFailed.entityIdConverter = Could not convert value {0} to an entity identifier
+converters.conversionFailed.personConverter = Could not convert value {0} to a Person entity
 
 ### Menu.Login ###
 menu.login.title = Login
@@ -71,42 +72,46 @@ menu.discipleship.pairs.title = Teacher/Disciple Pairs
 menu.discipleship.pairs.list.title = List Teacher/Disciple Pairs
 menu.discipleship.pairs.add.title = Add Teacher/Disciple Pair
 
-### Login ###
+### Pages.Login ###
 pages.login.actions.login.success = User has been successfully logged in
 pages.login.actions.login.failure = User name and password do not match
 pages.login.actions.logout.success = User has been successfully logged out
 pages.login.actions.reset = Login form has been reset
-
-### Home ###
-pages.home.title = Home
-pages.home.welcome = Welcome
-pages.home.description = "Church Management" is an application meant for managing the assets of a church, like: its members, its pastors, the persons involved in discipleship, etc.
-
-### Admin.Persons.List ###
-pages.persons.list.title = Persons
-pages.persons.list.actions.add = Add Person
-
-### Admin.Persons.Edit ###
-pages.persons.edit.title = Edit Person
-
-### Admin.Persons.Add ###
-pages.persons.add.title = Add Person
-
-### Admin.Persons.Remove ###
-pages.persons.remove.title = Remove Person
-pages.persons.remove.confirmationDialog.title = Confirm person removal
-pages.persons.remove.confirmationDialog.text = Are you sure you want to remove this person?
-
-### Login ###
 pages.login.title = Login
 pages.login.userName.label = User Name
 pages.login.userName.placeholder = Enter a user name
 pages.login.password.label = Password
 pages.login.password.placeholder = Enter a password
 
+### Pages.Home ###
+pages.home.title = Home
+pages.home.welcome = Welcome
+pages.home.description = The "Church Management" application manages the assets of a church, like: its members, its pastors, the persons involved in discipleship, etc.
+
+### Pages.Persons.List ###
+pages.persons.list.title = Persons
+pages.persons.list.actions.add = Add Person
+
+### Pages.Persons.Edit ###
+pages.persons.edit.title = Edit Person
+
+### Pages.Persons.Add ###
+pages.persons.add.title = Add Person
+
+### Pages.Persons.Remove ###
+pages.persons.remove.title = Remove Person
+pages.persons.remove.confirmationDialog.title = Confirm person removal
+pages.persons.remove.confirmationDialog.text = Are you sure you want to remove this person?
+
+### Pages.Discipleship.Teachers.List ###
+pages.discipleship.teachers.list.title = Discipleship Teachers
+pages.discipleship.teachers.list.actions.add = Add Discipleship Teacher
+
+### Entities
+entities.fields.version = Version
+
 ### Entities.Person ###
 entities.person.fields.id = Person ID
-entities.person.fields.version = Version
 entities.person.fields.firstName = First Name
 entities.person.fields.middleName = Middle Name
 entities.person.fields.lastName = Last Name
