Removed unused menu items, their associated messages and security checks.

--- a/src/main/resources/ro/satrapu/churchmanagement/ui/messages.properties
+++ b/src/main/resources/ro/satrapu/churchmanagement/ui/messages.properties
@@ -62,12 +62,8 @@ menu.persons.add.title = Add Person
 
 ### Menu.Discipleship ###
 menu.discipleship.title = Discipleship
-menu.discipleship.teachers.title = Teachers
-menu.discipleship.teachers.list.title = List Teachers
-menu.discipleship.teachers.add.title = Add Teacher
-menu.discipleship.disciples.title = Disciples
-menu.discipleship.disciples.list.title = List Disciples
-menu.discipleship.disciples.add.title = Add Disciple
+menu.discipleship.teachers.list.title = Teachers
+menu.discipleship.disciples.list.title = Disciples
 menu.discipleship.pairs.title = Teacher/Disciple Pairs
 menu.discipleship.pairs.list.title = List Teacher/Disciple Pairs
 menu.discipleship.pairs.add.title = Add Teacher/Disciple Pair
@@ -104,6 +100,10 @@ pages.persons.remove.confirmationDialog.title = Confirm person removal
 pages.persons.remove.confirmationDialog.text = Are you sure you want to remove this person?
 
 ### Pages.Discipleship.Teachers.List ###
+pages.discipleship.teachers.list.title = Discipleship Teachers
+pages.discipleship.teachers.list.actions.add = Add Discipleship Teacher
+
+### Pages.Discipleship.Teachers.Remove ###
 pages.discipleship.teachers.list.title = Discipleship Teachers
 pages.discipleship.teachers.list.actions.add = Add Discipleship Teacher
 
