Updated label English translations.

--- a/src/main/resources/ro/satrapu/churchmanagement/ui/messages.properties
+++ b/src/main/resources/ro/satrapu/churchmanagement/ui/messages.properties
@@ -62,11 +62,11 @@ menu.persons.add.title = Add Person
 
 ### Menu.Discipleship ###
 menu.discipleship.title = Discipleship
-menu.discipleship.teachers.list.title = Teachers
-menu.discipleship.disciples.list.title = Disciples
-menu.discipleship.pairs.title = Teacher/Disciple Pairs
-menu.discipleship.pairs.list.title = List Teacher/Disciple Pairs
-menu.discipleship.pairs.add.title = Add Teacher/Disciple Pair
+menu.discipleship.availabilityAsTeachers.title = Availability As Teachers
+menu.discipleship.availabilityAsDisciples.title = Availability As Disciples
+menu.discipleship.pairs.title = Teacher & Disciple Pairs
+menu.discipleship.pairs.list.title = List Teacher & Disciple Pairs
+menu.discipleship.pairs.add.title = Add Teacher & Disciple Pair
 
 ### Pages.Login ###
 pages.login.actions.login.success = User has been successfully logged in
@@ -100,12 +100,11 @@ pages.persons.remove.confirmationDialog.title = Confirm person removal
 pages.persons.remove.confirmationDialog.text = Are you sure you want to remove this person?
 
 ### Pages.Discipleship.Teachers.List ###
-pages.discipleship.teachers.list.title = Discipleship Teachers
-pages.discipleship.teachers.list.actions.add = Add Discipleship Teacher
-
-### Pages.Discipleship.Teachers.Remove ###
-pages.discipleship.teachers.list.title = Discipleship Teachers
-pages.discipleship.teachers.list.actions.add = Add Discipleship Teacher
+pages.discipleship.availabilityAsTeachers.title = Availability As Teachers
+pages.discipleship.availabilityAsTeachers.status.available = Available
+pages.discipleship.availabilityAsTeachers.status.unavailable  = Unavailable
+pages.discipleship.availabilityAsTeachers.actions.markAsAvailable = Mark As Available
+pages.discipleship.availabilityAsTeachers.actions.markAsUnavailable = Mark As Unavailable
 
 ### Entities
 entities.fields.version = Version
@@ -139,6 +138,12 @@ entities.user.actions.update.failure = Could not update user
 
 entities.user.actions.remove.success = User has been successfully removed
 entities.user.actions.remove.failure = Could not remove user
+
+### Model.DiscipleshipTeacherInfo ###
+model.dsicipleshipTeacherInfo.fields.personId = Person ID
+model.dsicipleshipTeacherInfo.fields.personName = Name
+model.dsicipleshipTeacherInfo.fields.personEmailAddress = E-mail Address
+model.dsicipleshipTeacherInfo.fields.availabilityStatus = Status
 
 # Override the default messages for all JSF converters and validators
 # ==============================================================================
