Fixed the query listing persons available as discipleship teachers. Added messages when succeeding or failing marking/unmarking persons as available for teaching disciples.

--- a/src/main/resources/ro/satrapu/churchmanagement/ui/messages.properties
+++ b/src/main/resources/ro/satrapu/churchmanagement/ui/messages.properties
@@ -44,7 +44,8 @@ global.recordDoesNotExist = Record was not found - either the provided ID is inv
 ### Converters ###
 converters.conversionFailed.title = Conversion failed
 converters.conversionFailed.entityIdConverter = Could not convert value {0} to an entity identifier
-converters.conversionFailed.personConverter = Could not convert value {0} to a Person entity
+converters.conversionFailed.discipleIdConverter = Could not convert value {0} to a Disciple identifier
+converters.conversionFailed.personIdConverter = Could not convert value {0} to a Person identifier
 
 ### Menu.Login ###
 menu.login.title = Login
@@ -103,8 +104,18 @@ pages.persons.remove.confirmationDialog.text = Are you sure you want to remove t
 pages.discipleship.availabilityAsTeachers.title = Availability As Teachers
 pages.discipleship.availabilityAsTeachers.status.available = Available
 pages.discipleship.availabilityAsTeachers.status.unavailable  = Unavailable
+
 pages.discipleship.availabilityAsTeachers.actions.markAsAvailable = Mark As Available
+pages.discipleship.availabilityAsTeachers.actions.markAsAvailable.success.many = Successfully marked {0} persons as *available* for discipleship teaching
+pages.discipleship.availabilityAsTeachers.actions.markAsAvailable.success.single = Successfully marked one person as *available* for discipleship teaching
+pages.discipleship.availabilityAsTeachers.actions.markAsAvailable.warning.none = No person has been marked as *available* for discipleship teaching
+pages.discipleship.availabilityAsTeachers.actions.markAsAvailable.failure = Failed to mark any person as *available* for discipleship teaching
+
 pages.discipleship.availabilityAsTeachers.actions.markAsUnavailable = Mark As Unavailable
+pages.discipleship.availabilityAsTeachers.actions.markAsUnavailable.success.many = Successfully marked {0} persons as *unavailable* for discipleship teaching
+pages.discipleship.availabilityAsTeachers.actions.markAsUnavailable.success.single = Successfully marked one person as *unavailable* for discipleship teaching
+pages.discipleship.availabilityAsTeachers.actions.markAsUnavailable.warning.none = No person has been marked as *unavailable* for discipleship teaching
+pages.discipleship.availabilityAsTeachers.actions.markAsUnavailable.failure = Failed to mark any person as *unavailable* for discipleship teaching
 
 ### Entities
 entities.fields.version = Version
