Issue #5 Manage person availability for acting as a disciple
Added initial support for marking persons as available to act as
disciples.

--- a/src/main/resources/ro/satrapu/churchmanagement/ui/messages.properties
+++ b/src/main/resources/ro/satrapu/churchmanagement/ui/messages.properties
@@ -117,6 +117,23 @@ pages.discipleship.availabilityAsTeachers.actions.markAsUnavailable.success.sing
 pages.discipleship.availabilityAsTeachers.actions.markAsUnavailable.warning.none = No person has been marked as *unavailable* for discipleship teaching
 pages.discipleship.availabilityAsTeachers.actions.markAsUnavailable.failure = Failed to mark any person as *unavailable* for discipleship teaching
 
+### Pages.Discipleship.Disciples.List ###
+pages.discipleship.availabilityAsDisciples.title = Availability As Disciples
+pages.discipleship.availabilityAsDisciples.status.available = Available
+pages.discipleship.availabilityAsDisciples.status.unavailable  = Unavailable
+
+pages.discipleship.availabilityAsDisciples.actions.markAsAvailable = Mark As Available
+pages.discipleship.availabilityAsDisciples.actions.markAsAvailable.success.many = Successfully marked {0} persons as *available* for discipleship
+pages.discipleship.availabilityAsDisciples.actions.markAsAvailable.success.single = Successfully marked one person as *available* for discipleship
+pages.discipleship.availabilityAsDisciples.actions.markAsAvailable.warning.none = No person has been marked as *available* for discipleship
+pages.discipleship.availabilityAsDisciples.actions.markAsAvailable.failure = Failed to mark any person as *available* for discipleship
+
+pages.discipleship.availabilityAsDisciples.actions.markAsUnavailable = Mark As Unavailable
+pages.discipleship.availabilityAsDisciples.actions.markAsUnavailable.success.many = Successfully marked {0} persons as *unavailable* for discipleship
+pages.discipleship.availabilityAsDisciples.actions.markAsUnavailable.success.single = Successfully marked one person as *unavailable* for discipleship
+pages.discipleship.availabilityAsDisciples.actions.markAsUnavailable.warning.none = No person has been marked as *unavailable* for discipleship
+pages.discipleship.availabilityAsDisciples.actions.markAsUnavailable.failure = Failed to mark any person as *unavailable* for discipleship
+
 ### Entities
 entities.fields.version = Version
 
