Removed unused entries. Inserted comments to increase readability.

--- a/src/main/resources/ro/satrapu/churchmanagement/ui/messages.properties
+++ b/src/main/resources/ro/satrapu/churchmanagement/ui/messages.properties
@@ -11,41 +11,37 @@
 #WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 #See the License for the specific language governing permissions and
 #limitations under the License.
+
+### Application ###
 application.title = Church Management
 application.poweredBy = Powered by JEE 7
-application.welcome = Welcome to the "Church Management" application
 application.error.title = An error has occurred
-application.error.token = Please use this token for getting support regarding this error:
 application.error.detail.title = Unfortunately, an error has occurred. Please use the menu above to navigate to a page of your choice.
 application.error.detail.panel.title = Details
 
+### Global Actions ###
 global.actions = Actions
 global.actions.login = Login
-global.actions.logout = Logout
 global.actions.yes = Yes
 global.actions.no = No
-global.actions.ok = OK
 global.actions.cancel = Cancel
 global.actions.save = Save
-global.actions.persist = Persist
 global.actions.remove = Remove
 global.actions.edit = Edit
-global.actions.update = Update
-global.actions.crudCancelled = Changes were not saved
 global.actions.reset = Reset
 
+### Global Edit Page ###
 global.fields.selectOneValue = Select a value
 global.fields.required = value is required
 global.fields.invalid = There are some invalid fields
 
+### Global Search Page ###
 global.noRecords = There are no records
-global.recordDoesNotExist = Record was not found - either the provided ID is invalid or it was removed by another user
 
 ### Converters ###
 converters.conversionFailed.title = Conversion failed
 converters.conversionFailed.entityIdConverter = Could not convert value {0} to an entity identifier
-converters.conversionFailed.discipleIdConverter = Could not convert value {0} to a Disciple identifier
-converters.conversionFailed.personIdConverter = Could not convert value {0} to a Person identifier
+converters.conversionFailed.personIdConverter = Could not convert value {0} to a person identifier
 
 ### Menu.Login ###
 menu.login.title = Login
@@ -63,11 +59,7 @@ menu.persons.add.title = Add Person
 
 ### Menu.Discipleship ###
 menu.discipleship.title = Discipleship
-menu.discipleship.availabilityAsTeachers.title = Availability As Teachers
-menu.discipleship.availabilityAsDisciples.title = Availability As Disciples
-menu.discipleship.pairs.title = Teacher & Disciple Pairs
-menu.discipleship.pairs.list.title = List Teacher & Disciple Pairs
-menu.discipleship.pairs.add.title = Add Teacher & Disciple Pair
+menu.discipleship.status.title = Status
 
 ### Pages.Login ###
 pages.login.actions.login.success = User has been successfully logged in
@@ -100,39 +92,8 @@ pages.persons.remove.title = Remove Person
 pages.persons.remove.confirmationDialog.title = Confirm person removal
 pages.persons.remove.confirmationDialog.text = Are you sure you want to remove this person?
 
-### Pages.Discipleship.Teachers.List ###
-pages.discipleship.availabilityAsTeachers.title = Availability As Teachers
-pages.discipleship.availabilityAsTeachers.status.available = Available
-pages.discipleship.availabilityAsTeachers.status.unavailable  = Unavailable
-
-pages.discipleship.availabilityAsTeachers.actions.markAsAvailable = Mark As Available
-pages.discipleship.availabilityAsTeachers.actions.markAsAvailable.success.many = Successfully marked {0} persons as *available* for discipleship teaching
-pages.discipleship.availabilityAsTeachers.actions.markAsAvailable.success.single = Successfully marked one person as *available* for discipleship teaching
-pages.discipleship.availabilityAsTeachers.actions.markAsAvailable.warning.none = No person has been marked as *available* for discipleship teaching
-pages.discipleship.availabilityAsTeachers.actions.markAsAvailable.failure = Failed to mark any person as *available* for discipleship teaching
-
-pages.discipleship.availabilityAsTeachers.actions.markAsUnavailable = Mark As Unavailable
-pages.discipleship.availabilityAsTeachers.actions.markAsUnavailable.success.many = Successfully marked {0} persons as *unavailable* for discipleship teaching
-pages.discipleship.availabilityAsTeachers.actions.markAsUnavailable.success.single = Successfully marked one person as *unavailable* for discipleship teaching
-pages.discipleship.availabilityAsTeachers.actions.markAsUnavailable.warning.none = No person has been marked as *unavailable* for discipleship teaching
-pages.discipleship.availabilityAsTeachers.actions.markAsUnavailable.failure = Failed to mark any person as *unavailable* for discipleship teaching
-
-### Pages.Discipleship.Disciples.List ###
-pages.discipleship.availabilityAsDisciples.title = Availability As Disciples
-pages.discipleship.availabilityAsDisciples.status.available = Available
-pages.discipleship.availabilityAsDisciples.status.unavailable  = Unavailable
-
-pages.discipleship.availabilityAsDisciples.actions.markAsAvailable = Mark As Available
-pages.discipleship.availabilityAsDisciples.actions.markAsAvailable.success.many = Successfully marked {0} persons as *available* for discipleship
-pages.discipleship.availabilityAsDisciples.actions.markAsAvailable.success.single = Successfully marked one person as *available* for discipleship
-pages.discipleship.availabilityAsDisciples.actions.markAsAvailable.warning.none = No person has been marked as *available* for discipleship
-pages.discipleship.availabilityAsDisciples.actions.markAsAvailable.failure = Failed to mark any person as *available* for discipleship
-
-pages.discipleship.availabilityAsDisciples.actions.markAsUnavailable = Mark As Unavailable
-pages.discipleship.availabilityAsDisciples.actions.markAsUnavailable.success.many = Successfully marked {0} persons as *unavailable* for discipleship
-pages.discipleship.availabilityAsDisciples.actions.markAsUnavailable.success.single = Successfully marked one person as *unavailable* for discipleship
-pages.discipleship.availabilityAsDisciples.actions.markAsUnavailable.warning.none = No person has been marked as *unavailable* for discipleship
-pages.discipleship.availabilityAsDisciples.actions.markAsUnavailable.failure = Failed to mark any person as *unavailable* for discipleship
+### Pages.Discipleship.Status ###
+pages.discipleship.status.title = Discipleship Status
 
 ### Entities
 entities.fields.version = Version
@@ -153,39 +114,19 @@ entities.person.actions.update.failure = Could not update person
 entities.person.actions.remove.success = Person has been successfully removed
 entities.person.actions.remove.failure = Could not remove person
 
-### Entities.User ###
-entities.user.fields.id = User ID
-entities.user.fields.userName = User Name
-entities.user.fields.password = Password
+### Entities.Discipleship ###
+entities.discipleship.fields.id = ID
+entities.discipleship.fields.personId = Person ID
+entities.discipleship.fields.status = Status
 
-entities.user.actions.save.success = User has been successfully added
-entities.user.actions.save.failure = Could not add user
-
-entities.user.actions.update.success = User has been successfully updated
-entities.user.actions.update.failure = Could not update user
-
-entities.user.actions.remove.success = User has been successfully removed
-entities.user.actions.remove.failure = Could not remove user
-
-### Model.DiscipleshipTeacherInfo ###
-model.dsicipleshipTeacherInfo.fields.personId = Person ID
-model.dsicipleshipTeacherInfo.fields.personName = Name
-model.dsicipleshipTeacherInfo.fields.personEmailAddress = E-mail Address
-model.dsicipleshipTeacherInfo.fields.availabilityStatus = Status
-
-# Override the default messages for all JSF converters and validators
-# ==============================================================================
-# Component Errors
-# ==============================================================================
+### JSF Component Errors ###
 javax.faces.component.UIInput.CONVERSION={0}: Conversion error occurred.
 javax.faces.component.UIInput.REQUIRED={0}: Validation Error: Value is required.
 javax.faces.component.UIInput.UPDATE={0}: An error occurred when processing your submitted information. 
 javax.faces.component.UISelectOne.INVALID={0}: Validation Error: Value is not valid
 javax.faces.component.UISelectMany.INVALID={0}: Validation Error: Value is not valid
 
-# ==============================================================================
-# Converter Errors
-# ==============================================================================
+### JSF Converter Errors ###
 javax.faces.converter.BigDecimalConverter.DECIMAL={2}: ''{0}'' must be a signed decimal number.
 javax.faces.converter.BigDecimalConverter.DECIMAL_detail={2}: ''{0}'' must be a signed decimal number consisting of zero or more digits, that may be followed by a decimal point and fraction.  Example: {1} 
 javax.faces.converter.BigIntegerConverter.BIGINTEGER={2}: ''{0}'' must be a number consisting of one or more digits.
@@ -227,10 +168,7 @@ javax.faces.converter.ShortConverter.SHORT={2}: ''{0}'' must be a number consist
 javax.faces.converter.ShortConverter.SHORT_detail={2}: ''{0}'' must be a number between -32768 and 32767 Example: {1}
 javax.faces.converter.STRING={1}: Could not convert ''{0}'' to a string.
 
-
-# ==============================================================================
-# Validator Errors
-# ==============================================================================
+### JSF Validator Errors ###
 javax.faces.validator.DoubleRangeValidator.MAXIMUM={1}: Validation Error: Value is greater than allowable maximum of "{0}"
 javax.faces.validator.DoubleRangeValidator.MINIMUM={1}: Validation Error: Value is less than allowable minimum of ''{0}''
 javax.faces.validator.DoubleRangeValidator.NOT_IN_RANGE={2}: Validation Error: Specified attribute is not between the expected values of {0} and {1}.
