--- a/src/main/resources/ro/satrapu/churchmanagement/ui/messages.properties
+++ b/src/main/resources/ro/satrapu/churchmanagement/ui/messages.properties
@@ -40,6 +40,7 @@ global.noRecords = There are no records
 
 ### Converters ###
 converters.conversionFailed.title = Conversion failed
+converters.conversionFailed.discipleshipStatusConverter = Could not convert value {0} to a discipleship status
 converters.conversionFailed.entityIdConverter = Could not convert value {0} to an entity identifier
 converters.conversionFailed.personIdConverter = Could not convert value {0} to a person identifier
 
@@ -104,6 +105,7 @@ entities.person.fields.firstName = First Name
 entities.person.fields.middleName = Middle Name
 entities.person.fields.lastName = Last Name
 entities.person.fields.emailAddress = E-mail Address
+entities.person.fields.discipleshipStatus = Discipleship Status
 
 entities.person.actions.save.success = Person has been successfully added
 entities.person.actions.save.failure = Could not add person
@@ -114,10 +116,11 @@ entities.person.actions.update.failure = Could not update person
 entities.person.actions.remove.success = Person has been successfully removed
 entities.person.actions.remove.failure = Could not remove person
 
-### Entities.Discipleship ###
-entities.discipleship.fields.id = ID
-entities.discipleship.fields.personId = Person ID
-entities.discipleship.fields.status = Status
+### Enumerations ###
+enumerations.DiscipleshipStatus.DISCIPLE_CANDIDATE=Disciple Candidate
+enumerations.DiscipleshipStatus.NOT_INTERESTED=Not Interested
+enumerations.DiscipleshipStatus.TEACHING_CANDIDATE=Teaching Candidate
+
 
 ### JSF Component Errors ###
 javax.faces.component.UIInput.CONVERSION={0}: Conversion error occurred.
